--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "jest",
+    "test": "jest --env=jsdom --verbose",
     "preset": "ts-jest"
   },
   "dependencies": {
@@ -20,6 +20,9 @@
     "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-testing-library": "^6.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -37,13 +40,15 @@
     "@storybook/react": "^7.4.0",
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/dom": "^9.3.1",
-    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.4",
     "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "storybook": "^7.4.0",
+    "svelte-jester": "^3.0.0",
     "ts-jest": "^29.1.1"
   }
 }
