--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.4",
+    "axios-mock-adapter": "^1.21.5",
     "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
